name:    nesell
version: 0.1.0.0

synopsis:    NES emulator
description: Please see README.md
homepage:    https://github.com/expede/nesell#readme

license:      MIT
license-file: LICENSE

author:     Brooklyn Zelenka
maintainer: be.zelenka@gmail.com
copyright:  2016 Brooklyn Zelenka

category:   Game
build-type: Simple

extra-source-files: README.md
cabal-version:      >=1.24

source-repository head
  type:     git
  location: https://github.com/expede/nesell

library
  default-language:   Haskell2010
  ghc-options:       -Wall +RTS -N -RTS -threaded
  default-extensions: NoImplicitPrelude

  hs-source-dirs:  src
  exposed-modules: Nesell
  build-depends:   base >= 4.7 && < 5
                 , foundation >= 0.0.2 && < 1.0
                 , QuickCheck >= 2.7   && < 3.0

executable nesell-app
  hs-source-dirs:   app
  main-is:          Main.hs

  default-language:   Haskell2010
  ghc-options:       -Wall +RTS -N -RTS -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude

  build-depends: base
               , nesell
               , foundation >= 0.0.2 && < 1.0

test-suite nesell-test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude

  hs-source-dirs: test
  main-is:        Spec.hs

  build-depends:  base
                , nesell
                , foundation >= 0.0.2 && < 1.0

test-suite test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:       -Wall +RTS -N -RTS -threaded -j4
  default-extensions: NoImplicitPrelude

  hs-source-dirs: test
  main-is:        Spec.hs

  build-depends: base  >= 4 && < 5
               , foundation >= 0.0.2 && < 1.0
               , tasty >= 0.10 && < 1.0
               , tasty-hunit      >= 0.9 && < 1.0
               , tasty-smallcheck >= 0.8 && < 1.0
               , tasty-quickcheck >= 0.8 && < 1.0
               , smallcheck       >= 1.1 && < 2.0
               , checkers         >= 0.4 && < 1.0
               , props            >= 0.1 && < 1.0
               , nesell

test-suite doctest
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:       -Wall +RTS -N -RTS -threaded
  default-extensions: NoImplicitPrelude

  hs-source-dirs: test
  main-is:        Doctest.hs

  build-depends: base
               , foundation >= 0.0.2 && < 1.0
               , doctest    >= 0.9 && < 1.0
               , nesell
